--- a/pixel-city/Info.plist
+++ b/pixel-city/Info.plist
@@ -43,6 +43,8 @@
 	<string>This app requires your location to pull photos from Flickr.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app requires your location to pull photos from Flickr.</string>
+	<key>privacy - location usage description</key>
+	<string>This app requires your location to pull photos from Flickr.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app requires your location to pull photos from Flickr.</string>
 </dict>
